[tool.poetry]
name = "MCNiti_QuizBot"
version = "1.0.0"
description = "Quiz Bot for MS NITI"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.4.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.5"
pytz = "^2025.2"
apscheduler = "^3.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
